--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,26 +1,22 @@
 <%- include("header") -%>
 <% cardList.forEach(function(card){ %>
   <div class="card">
-    <h1 class="verses"><%=card.verses%></h1>
+    <h1 class="verses"><a href="card/<%=card.verses%>"><%=card.verses%></a></h1>
     <hr>
     <p class="scripture"><%=card.scripture%></p>
-    <p class="gem"><%= card.gem %></p>
+    <p class="gem"><%= card.gem.split("/item/") %></p>
+    <%var cardGem = card.gem.split("/item/") %>
+    <div class="gem gemCollection">
+      <% cardGem.forEach(gem => { %>
+        <p class="tags"><%= gem %></p>
+      <% }); %>
+    </div>
     <a href="/edit/<%=card.gem %>">
       <svg class="edit" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-pencil" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
           <path fill-rule="evenodd" d="M12.146.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1 0 .708l-10 10a.5.5 0 0 1-.168.11l-5 2a.5.5 0 0 1-.65-.65l2-5a.5.5 0 0 1 .11-.168l10-10zM11.207 2.5L13.5 4.793 14.793 3.5 12.5 1.207 11.207 2.5zm1.586 3L10.5 3.207 4 9.707V10h.5a.5.5 0 0 1 .5.5v.5h.5a.5.5 0 0 1 .5.5v.5h.293l6.5-6.5zm-9.761 5.175l-.106.106-1.528 3.821 3.821-1.528.106-.106A.5.5 0 0 1 5 12.5V12h-.5a.5.5 0 0 1-.5-.5V11h-.5a.5.5 0 0 1-.468-.325z"/>
       </svg>
     </a>
-    <svg onclick="revealGem(event)" id="dropdown" width="1em" height="1em" viewBox="0 0 16 16" class="bi bi-chevron-down" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-      <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
-    </svg>
   </div>
 <% }) %>
-
-<script>
-  function revealGem(event){
-    console.log(event.target.previousSibling.previousSibling.previousSibling.previousSibling)
-    event.target.previousSibling.previousSibling.previousSibling.previousSibling.style.display = "block"
-  }
-</script>
 
 <%- include("footer") -%>
