change verses to be the same size as card

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -41,7 +41,8 @@ svg {
 }
 
 .verses {
-  width: inherit;
+  width: -webkit-fill-available;
+  width: -moz-available;
   overflow-x: hidden;
   text-align: center;
   background-color: #253855;
